auth/Service-authelia.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9959"
    prometheus.io/scrape: "true"
  labels:
    name: authelia
  name: authelia
  namespace: auth
spec:
  ports:
  - name: authelia-http
    port: 9091
    targetPort: 9091
  selector:
    name: authelia
