auth/Service-satph.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: satph
  name: satph
  namespace: auth
spec:
  ports:
  - name: satph-http
    port: 3000
    targetPort: 3000
  selector:
    name: satph
